<resources>
    <string name="app_name">TryoutApp</string>
    <string name="total_test">Total test kamu :</string>
    <string name="nilai_rata_rata">Nilai rata-rata : </string>
    <string name="hasil_hijau">Mantap! Pertahankan yah</string>
    <string name="hasil_kuning">Lumayan, tingkatkan lagi yah</string>
    <string name="hasil_merah">Gapapa, ayo latihan terus</string>
    <string name="logout">Logout</string>
    <string name="error_state_title_profile">Yah error nih :(</string>
    <string name="error_state_subtitle_profile">Periksa koneksi internetmu atau login dulu dengan klik tombol LOGIN. Jika belum bisa, silakan hubungi kami, semangat ya !</string>
    <string name="test_ke">Test ke - %s</string>
    <string name="benar">Benar : %s</string>
    <string name="salah">Salah : %s</string>
    <string name="kosong">Kosong : %s</string>
    <string name="tanda_lebih_besar">></string>
    <string name="data_dan_ketidakpastian">Data dan Ketidakpastian</string>
    <string name="geometri_dan_pengukuran">Geometri dan Pengukuran</string>
    <string name="jawaban_yang_benar">Jawaban yang benar : </string>
    <string name="pembahasan">Pembahasan : </string>
    <string name="menit"> menit </string>
    <string name="detik"> detik</string>
    <string name="empty_state_title_score">Yah masih kosong nih :v</string>
    <string name="empty_state_subtitle_score">Silakan kerjakan test nya dulu, nanti skor test mu akan muncul otomatis di sini, yuk mulai test pertamamu !</string>
    <string name="error_state_title_score">Yah error nih :(</string>
    <string name="error_state_subtitle_score">Periksa koneksi internetmu atau klik tombol REFRESH untuk me-refresh halaman. Jika belum bisa, silakan hubungi kami, semangat ya !</string>
    <string name="welcome_auth">Selamat datang di Try<font fgcolor="#E9A100">Out</font>App!</string>
    <string name="auth_login_content">Login sekarang dan rasakan semangat try out melalui test Try Out inovatif di TryOutApp.</string>
    <string name="login_button">Login with Google</string>
    <string name="term_n_condition">Dengan mendaftar/masuk, kamu menyetujui syarat dan <font fgcolor="#38A4E1">ketentuan layanan</font> serta <font fgcolor="#38A4E1">kebijakan privasi</font>.</string>
    <string name="home">Home</string>
    <string name="score">Score</string>
    <string name="profile">Profile</string>
    <string name="welcome_home">Selamat Datang,</string>
    <string name="start_test">Mulai Test</string>
    <string name="rule_title">Sebelum mengikuti test try out ini, harap membaca peraturan berikut ini:</string>
    <string name="rule_content"><![CDATA[<ol type="1"><li>Pastikan kamu dalam kondisi fit dan jauh dari distraksi yang dapat mempengaruhi performa pengerjaan test ini.</li><li>Waktu pengerjaan test adalah 1 jam secara keseluruhan. Jika waktu habis, hanya jawaban yang sudah dipilih yang akan disimpan.</li><li>Dilarang untuk bekerjasama atau membantu orang lain dalam mengerjakan test ini.</li><li>Tidak boleh membuka layar lain pada perangkat elektronik yang digunakan selama test.</li><li>Dilarang mengambil dokumentasi saat test berlangsung, dalam bentuk apapun, termasuk foto, video, atau screenshot.</li><li>Tidak boleh mencari bantuan di internet saat mengerjakan test ini.</li><li>Jika sudah selesai, kamu akan diarahkan ke halaman score untuk melihat hasil test-mu disertai pembahasan.</li></ol>]]></string>
    <string name="problem_type">Ada 2 (dua) tipe soal nih</string>
    <string name="please_start">Silakan mulai kapanpun kamu siap. Jangan lupa doa dulu ya, good luck !</string>
    <string name="alert_dialog_title">Yakin nih mau logout ?</string>
    <string name="positive_btn">Yakin</string>
    <string name="negative_btn">Engga</string>
    <string name="error_state_title_problem">Yah error nih :(</string>
    <string name="error_state_subtitle_problem">Periksa koneksi internetmu atau klik tombol REFRESH untuk me-refresh halaman. Jika belum bisa, silakan hubungi kami, semangat ya !</string>
    <string name="title_activity_try_out_done">TryOutDoneActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="refresh">Refresh</string>
    <string name="login">Login</string>
    <string name="mulai_test_pertama">Mulai Test Pertamamu</string>
    <string name="klik_item_score">Klik untuk melihat pembahasan . . .</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="lihat_skor">Lihat Skor</string>
    <string name="done_state_home_title">Bravo! kamu Telah Menyelesaikan test dengan Brilian</string>
    <string name="done_state_home_subtitle">Santai sejenak dan nikmati waktu istirahatmu, setelah itu lihat skormu yuk !</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="number_of_problem">(%s/%s)</string>
    <string name="number_of_explanation">(%s/%s)</string>
    <string name="submit">Submit</string>
    <string name="type_here">Type here..</string>
    <string name="ke_beranda">Ke Beranda</string>
</resources>