<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tryout.choice.ChoiceActivity">

    <com.kennyc.view.MultiStateView
        android:id="@+id/state_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:msv_errorView="@layout/layout_error_problem"
        app:msv_loadingView="@layout/layout_loading_choice"
        app:msv_viewState="loading">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="16dp">

            <ImageView
                android:id="@+id/iv_illust"
                android:layout_width="3000dp"
                android:layout_height="300dp"
                android:importantForAccessibility="no"
                android:src="@drawable/image_choice"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title"
                style="@style/font_20_bold_dark_blue_180B3F"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/problem_type"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_illust" />

            <TextView
                android:id="@+id/tv_content"
                style="@style/font_18_normal_dark_blue_180B3F"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/please_start"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_data_dan_ketidakpastian"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/shape_bg_rounded_corner_home_on_boarding_dark_blue_12_full_radius"
                android:text="@string/data_dan_ketidakpastian"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_content" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_geometri_dan_pengukuran"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/shape_bg_rounded_corner_home_on_boarding_dark_blue_12_full_radius"
                android:text="@string/geometri_dan_pengukuran"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="@id/btn_data_dan_ketidakpastian"
                app:layout_constraintStart_toStartOf="@id/btn_data_dan_ketidakpastian"
                app:layout_constraintTop_toBottomOf="@id/btn_data_dan_ketidakpastian" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.kennyc.view.MultiStateView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>