<?xml version="1.0" encoding="utf-8"?>
<com.kennyc.view.MultiStateView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/state_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue_180B3F"
    app:msv_loadingView="@layout/layout_loading_common"
    app:msv_viewState="content"
    tools:context=".ui.auth.AuthActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:importantForAccessibility="no"
            android:src="@drawable/image_logo_without_text_v_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/shape_bg_rounded_corner_white_50_top_left_right_radius"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo">

            <ImageView
                android:id="@+id/iv_welcome"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginTop="16dp"
                android:importantForAccessibility="no"
                android:src="@drawable/image_auth_v_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_welcome"
                style="@style/font_24_bold_dark_blue_180B3F"
                android:layout_width="0dp"
                android:textAlignment="center"
                android:layout_marginHorizontal="16dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/welcome_auth"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_welcome" />

            <TextView
                android:id="@+id/tv_welcome_content"
                style="@style/font_14_normal_dark_blue_180B3F"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/auth_login_content"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/tv_welcome"
                app:layout_constraintStart_toStartOf="@+id/tv_welcome"
                app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="32dp"
                android:drawableLeft="@drawable/image_google_v_1"
                android:text="@string/login_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_welcome_content" />

            <TextView
                android:id="@+id/tv_term_n_condition"
                style="@style/font_14_normal_dark_gray_8B929C"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginBottom="16dp"
                android:text="@string/term_n_condition"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.kennyc.view.MultiStateView>