<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/refresh_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    tools:context=".ui.tryout_done.TryoutDoneActivity">

    <com.kennyc.view.MultiStateView
        android:id="@+id/state_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:msv_errorView="@layout/layout_error_problem"
        app:msv_loadingView="@layout/layout_loading_tryout_done"
        app:msv_viewState="loading">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="320dp"
                android:layout_height="320dp"
                android:id="@+id/ivError"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tvErrorTitle"
                android:src="@drawable/image_done"
                android:importantForAccessibility="no" />

            <TextView
                android:layout_width="290sp"
                android:layout_height="wrap_content"
                android:id="@+id/tvErrorTitle"
                android:text="@string/done_state_home_title"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/ivError"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tvErrorSubtitle"
                style="@style/font_14_bold_dark_blue_180B3F"/>

            <TextView
                android:layout_width="290sp"
                android:layout_height="wrap_content"
                android:id="@+id/tvErrorSubtitle"
                android:text="@string/done_state_home_subtitle"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/tvErrorTitle"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"

                android:textAlignment="center"
                style="@style/font_12_normal_dark_blue_180B3F"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnViewScore"
                app:layout_constraintTop_toBottomOf="@id/tvErrorSubtitle"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                style="@style/font_14_bold_white"
                android:textAllCaps="false"
                android:layout_marginTop="32dp"
                android:text="@string/lihat_skor"
                android:background="@drawable/shape_bg_rounded_corner_tryout_done_dark_blue_12_full_radius"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.kennyc.view.MultiStateView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>